fix error on iphone

--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ body {
     background-color: var(--gray-bg);
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     overflow-y: scroll;
 }
 .profile-body {
@@ -53,7 +53,7 @@ small::after {
     position: absolute;
     left: 0;
     top: 0;
-    height: 100vh;
+    height: 100dvh;
     width: 45vw;
     padding: 10px;
     z-index: 2;
@@ -86,7 +86,7 @@ small::after {
     position: absolute;
     right: 0;
     top: 0;
-    height: 100vh;
+    height: 100dvh;
     width: 55vw;
     background-color: var(--gray-bg);
     display: flex;
@@ -95,7 +95,7 @@ small::after {
 }
 .p-app-container {
     width: 100vw;
-    height: 100vh !important;
+    height: 100dvh !important;
     position: absolute;
     right: 0;
     top: 0;
@@ -1025,7 +1025,7 @@ small::after {
 /* mobile version changes */
 @media (max-width: 992px) {
     .bg-container {
-        height: 100vh;
+        height: 100dvh;
         width: 100%;
         padding: 0;
         z-index: 0;
@@ -1096,7 +1096,7 @@ small::after {
 }
 .p-app-row {
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     border-top-left-radius: 2rem;
     border-top-right-radius: 2rem;
     padding: 0 !important;
